serenity: Use a proc macro to generate serenity's errno codes instead
We won't have out-of-tree builds, so just use SERENITY_ROOT and read the
file directly from the serenity checkout.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ features = ["const-extern-fn", "extra_traits"]
 
 [dependencies]
 rustc-std-workspace-core = { version = "1.0.0", optional = true }
+serenity_proc_macros = { path = "src/unix/serenity/serenity_proc_macros" }
 
 [features]
 default = ["std"]
